<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_96sdp"
        android:layout_marginEnd="@dimen/_96sdp"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:padding="0dp"
        android:text="Login User"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="@dimen/_19sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded,UnusedAttribute" />

    <!--<TextView
        android:id="@+id/subTitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_110sdp"
        android:textAlignment="center"
        android:textFontWeight="400"
        android:text="@string/subtitel"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:lineHeight="20dp"
        tools:ignore="UnusedAttribute" />
-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_26sdp"
        android:background="@drawable/custom_backgroud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_105sdp"
            android:width="@dimen/_400sdp"
            android:fontFamily="@font/poppins"
            android:gravity="fill"
            android:text="@string/signin_welcome_back"
            android:textColor="#293041"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="@dimen/_15sdp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:fontFamily="@font/lato"
            android:lineHeight="@dimen/_17sdp"
            android:padding="@dimen/_2sdp"
            android:text="@string/signin_label"
            android:textColor="#7D8FAB"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:lineHeight="@dimen/_15sdp"
            tools:ignore="UnusedAttribute" />


        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_21sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:background="@drawable/custom_backgroud_edittext"
            android:drawableStart="@drawable/user"
            android:drawablePadding="@dimen/_9sdp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:text="maulik.techeniac@gmail.com"
            android:inputType="textPersonName"
            android:padding="@dimen/_2sdp"
            android:paddingStart="@dimen/_14sdp"
            android:textColor=" #293041"
            android:textColorHint="#617D8FAB"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="Autofill,RtlSymmetry" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:background="@drawable/custom_backgroud_edittext"
            android:drawableStart="@drawable/password"
            android:drawablePadding="@dimen/_9sdp"
            android:text="Test@123"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="@dimen/_2sdp"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor=" #293041"
            android:textColorHint="#617D8FAB"
            android:textSize="@dimen/_15sdp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/etUser"
            app:layout_constraintStart_toStartOf="@+id/etUser"
            app:layout_constraintTop_toBottomOf="@+id/etUser"
            tools:ignore="Autofill,HardcodedText" />

        <ImageView
            android:id="@+id/ivEye"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:padding="@dimen/_5sdp"
            android:paddingEnd="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintTop_toTopOf="@+id/etPassword"
            app:srcCompat="@drawable/ic_visibility_off_eye"
            tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/signinBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:width="@dimen/_70sdp"
            android:background="@drawable/fill_button_selector"
            android:elevation="50dp"
            android:text="SIGN IN"
            android:textColor="@drawable/fill_button_text_selector"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            tools:ignore="HardcodedText" />

        <!-- <View
            android:id="@+id/shadow"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_vector_shedow"
            android:foregroundGravity="center_horizontal"
            android:paddingTop="10dp"
            app:backgroundTint="@null"
            app:elevation="30dp"
            app:layout_constraintEnd_toEndOf="@+id/signinBtn"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/signinBtn"
            app:layout_constraintTop_toTopOf="@+id/signinBtn" />
-->
        <CheckBox
            android:id="@+id/cbSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:checked="true"
            android:fontFamily="@font/lato"
            android:text="Keep Sign In"
            android:textAlignment="center"
            android:textColor="#293041 "
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/signinBtn"
            app:layout_constraintTop_toBottomOf="@+id/signinBtn"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="@dimen/_2sdp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorLink="#FFFFFF"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal|bold"
            android:translationY="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="@+id/cbSignin"
            app:layout_constraintEnd_toEndOf="@+id/signinBtn"
            app:layout_constraintTop_toTopOf="@+id/cbSignin"
            android:focusable="true" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/signin_text"
            android:textColor="#7D8FAB"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbSignin" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@drawable/button_text_selector"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>