<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:context=".Activity.SignInActivity">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_96sdp"
            android:layout_marginTop="@dimen/_11sdp"
            android:layout_marginEnd="@dimen/_96sdp"
            android:width="@dimen/_600sdp"
            android:textFontWeight="900"
            android:height="40dp"
            android:fontFamily="@font/poppins"
            android:textAlignment="center"
            android:text="Register User"
            android:textColor=" #FFFFFF"
            android:textSize="@dimen/_19sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,RtlHardcoded,UnusedAttribute" />

        <!-- <TextView
             android:id="@+id/subTitel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="@dimen/_110sdp"
             android:layout_marginTop="@dimen/_11sdp"
             android:layout_marginEnd="@dimen/_110sdp"
             android:layout_marginBottom="@dimen/_15sdp"
             android:text="@string/signup_titel"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:lineHeight="20dp"
             tools:ignore="MissingConstraints" />-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/custom_backgroud"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints">
  <!--          <RelativeLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">-->

            <RelativeLayout
                android:id="@+id/profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/profile_bg"
                    android:onClick="showImage"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_person"
                    tools:ignore="UsingOnClickInXml" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_add_photo"
                    style="@style/FabStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:onClick="pickProfileImage" />

                <!--    <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/uProfile"
                            style="@style/ImageButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/imgProfile"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="10dp"
                            android:background="@android:color/transparent"
                            android:onClick="uploadImage"
                            android:src="@drawable/outline_cloud_upload_24" />
                -->

            </RelativeLayout>

              <!--  <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/pDeleteView"
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/imgProfileInfo"
                    android:background="@android:color/transparent"
                    android:onClick="deleteview"
                    android:src="@drawable/ic_baseline_delete_24" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgProfileInfo"
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:onClick="showImageInfo"
                    app:srcCompat="@drawable/outline_info_24" />-->

           <!-- </RelativeLayout>-->


            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:layout_marginBottom="@dimen/_13sdp"
                android:background="@drawable/custom_backgroud_edittext"
                android:drawableStart="@drawable/user"
                android:drawablePadding="@dimen/_9sdp"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="Username"
                android:inputType="text"
                android:paddingStart="@dimen/_13sdp"
                android:textColor=" #293041"
                android:textColorHint="#617D8FAB"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toTopOf="@+id/etEmailUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="Autofill,HardcodedText,RtlSymmetry" />

            <EditText
                android:id="@+id/etEmailUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/custom_backgroud_edittext"
                android:drawableStart="@drawable/email"
                android:drawablePadding="@dimen/_9sdp"
                android:ems="50"
                android:fontFamily="@font/lato"
                android:hint="@string/signup_email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_13sdp"
                android:textColor=" #293041"
                android:textColorHint="#617D8FAB"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toTopOf="@+id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="Autofill,RtlSymmetry" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:layout_marginBottom="@dimen/_13sdp"
                android:background="@drawable/custom_backgroud_edittext"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_9sdp"
                android:ems="15"
                android:hint="@string/signup_password_hint"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_14sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textColor=" #293041"
                android:textColorHint="#617D8FAB"
                android:textSize="@dimen/_15sdp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/registerBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/ivEye"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:padding="@dimen/_5sdp"
                android:paddingEnd="@dimen/_6sdp"
                app:layout_constraintBottom_toBottomOf="@+id/etPassword"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintTop_toTopOf="@+id/etPassword"
                app:srcCompat="@drawable/ic_visibility_off_eye"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:background="@drawable/fill_button_selector"
                android:elevation="50dp"
                android:text="@string/signup_register"
                android:textColor="@drawable/fill_button_text_selector"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/checkBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UnknownId" />

            <!-- <View
                android:id="@+id/shadow"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/ic_vector_shedow"
                android:foregroundGravity="center_horizontal"
                app:backgroundTint="@drawable/ic_vector_shedow"
                app:elevation="30dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_register"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="@+id/btn_register"
                app:layout_constraintTop_toTopOf="@+id/btn_register" />
    -->

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:layout_marginBottom="@dimen/_13sdp"
                android:checked="true"
                android:fontFamily="@font/lato"
                android:gravity="fill"
                android:paddingStart="@dimen/_6sdp"
                android:text="@string/signup_checkbox"
                android:textColor="#7D8FAB "
                android:textFontWeight="400"
                android:textIsSelectable="false"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RtlSymmetry,UnusedAttribute" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_84sdp"
                android:layout_marginEnd="@dimen/_83sdp"
                android:layout_marginBottom="@dimen/_13sdp"
                android:gravity="center"
                android:text="@string/signup_label"
                android:textColor="#7D8FAB"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintBottom_toTopOf="@+id/signinBtnUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/signinBtnUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="SIGN IN"
                android:textColor="@drawable/button_text_selector"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="HardcodedText" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>